[gd_scene load_steps=10 format=3 uid="uid://cu3r2d610eiwp"]

[ext_resource type="Texture2D" uid="uid://baro7lf6rljlb" path="res://Assets/Images/User interface/ItemPickUpBox/right.png" id="1"]
[ext_resource type="Script" path="res://InventoryLogic/ItemPickUpBox.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://1o28e3tdqq8f" path="res://Assets/Images/User interface/ItemPickUpBox/middle.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dqquydurtk0q" path="res://Assets/Images/User interface/ItemPickUpBox/left.png" id="5"]
[ext_resource type="Theme" uid="uid://d3voewdqos1nj" path="res://Assets/Themes/text.tres" id="5_y5atq"]
[ext_resource type="Texture2D" uid="uid://dxg01pggfu4xb" path="res://Assets/Images/User interface/ItemPickUpBox/x.png" id="6"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="1"]
resource_name = "fade out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3kbd"]
_data = {
"RESET": SubResource("2"),
"fade out": SubResource("1")
}

[node name="ItemPickUpBox" type="Control"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 3
anchors_preset = 0
offset_bottom = 24.0
mouse_filter = 2
script = ExtResource("2")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 56.0
offset_bottom = 24.0
mouse_filter = 2
theme_override_constants/h_separation = 0
columns = 3

[node name="TextureRect" type="TextureRect" parent="GridContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("4")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1")

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 6.0
offset_right = 393.0
offset_bottom = 240.0
scale = Vector2(0.06, 0.06)
theme = ExtResource("5_y5atq")
text = "Wood"
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Quantity" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 17.0
offset_right = 105.0
offset_bottom = 78.0
grow_horizontal = 0
scale = Vector2(0.1, 0.1)

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u3kbd")
}

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
